Update. Se termino de modificar codigo en PPT page. se agregaron estilos.

--- a/piedra-papel-tijera/src/pages/result/result.scss
+++ b/piedra-papel-tijera/src/pages/result/result.scss
@@ -1,3 +1,12 @@
 page-result {
 
+    ion-content {
+    background-image: url(http://3.bp.blogspot.com/-FZh-esu0MoY/UvABr45dMHI/AAAAAAAAALc/FE4tlDlrBYw/s1920/16.jpg);    
+    background-repeat: no-repeat;
+    //background-repeat: repeat-x;
+    //background-position: right top;
+    background-attachment: fixed;
+    background-size: cover;
+    }
+
 }
