--- a/piedra-papel-tijera/src/pages/ppt/ppt.scss
+++ b/piedra-papel-tijera/src/pages/ppt/ppt.scss
@@ -1,3 +1,25 @@
 page-ppt {
 
+    button[type=button] {
+    background-color: indianred;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    }
+
+    ion-content {
+    //background-image: url(http://mygaming.co.za/news/wp-content/uploads/2015/06/Final-Fantasy-VII-Remake-Cloud-vs.-Sephiroth.jpg);
+    //background-image: url(http://i.imgur.com/l2X7dNK.jpg);
+    //background-image: url(http://cdn.wallpapersafari.com/27/95/0HqIgA.jpg);
+    background-image: url(https://s-media-cache-ak0.pinimg.com/236x/9a/9b/4d/9a9b4d23ab645617d014d72136d09eba.jpg);
+    background-repeat: no-repeat;
+    //background-repeat: repeat-x;
+    //background-position: right top;
+    background-attachment: fixed;
+    background-size: cover;
+    }
+
 }
