cambios de estilos

--- a/Trivia/src/pages/login/login.scss
+++ b/Trivia/src/pages/login/login.scss
@@ -16,6 +16,8 @@ page-login {
     border: 2px solid palevioletred;
     border-radius: 4px;
     color: white;
+    font-size: 200%;
+    font-weight: bold
     }
 
     input[type=password] {
@@ -26,6 +28,8 @@ page-login {
     border: 2px solid palevioletred;
     border-radius: 4px;
     color: white;
+    font-size: 200%;
+    font-weight: bold
     }
 
     button[type=submit] {
