--- a/Trivia/src/pages/signin/signin.scss
+++ b/Trivia/src/pages/signin/signin.scss
@@ -8,6 +8,8 @@ page-signin {
     border: 2px solid lightslategrey;
     border-radius: 4px;
     color: white;
+    font-size: 150%;
+    font-weight: bold
     }
 
     input[type=password] {
@@ -18,6 +20,8 @@ page-signin {
     border: 2px solid lightslategray;
     border-radius: 4px;
     color: white;
+    font-size: 150%;
+    font-weight: bold
     }
 
     button[type=button] {
