--- a/piedra-papel-tijera/src/pages/login/login.scss
+++ b/piedra-papel-tijera/src/pages/login/login.scss
@@ -8,6 +8,8 @@ page-login {
     border: 2px solid orangered;
     border-radius: 4px;
     color: white;
+    font-size: 200%;
+    font-weight: bold
     }
 
     input[type=password] {
@@ -18,6 +20,8 @@ page-login {
     border: 2px solid orangered;
     border-radius: 4px;
     color: white;
+    font-size: 200%;
+    font-weight: bold
     }
 
     button[type=submit] {
