--- a/piedra-papel-tijera/src/pages/ppt/ppt.scss
+++ b/piedra-papel-tijera/src/pages/ppt/ppt.scss
@@ -23,3 +23,24 @@ page-ppt {
     }
 
 }
+
+.clase-toast-perdido {
+  > div{
+       background-color:red!important;
+       border-radius: 12px;
+   }
+}
+
+.clase-toast-ganado {
+  > div{
+       background-color:green!important;
+       border-radius: 12px;
+   }
+}
+
+.clase-toast-empate {
+  > div{
+       background-color:orange!important;
+       border-radius: 12px;
+   }
+}
