--- a/piedra-papel-tijera/src/pages/signin/signin.scss
+++ b/piedra-papel-tijera/src/pages/signin/signin.scss
@@ -8,6 +8,8 @@ page-signin {
     border: 2px solid aqua;
     border-radius: 4px;
     color: white;
+    font-size: 160%;
+    font-weight: bold
     }
 
     input[type=password] {
@@ -18,6 +20,8 @@ page-signin {
     border: 2px solid aqua;
     border-radius: 4px;
     color: white;
+    font-size: 160%;
+    font-weight: bold
     }
 
     button[type=button] {
