--- a/piedra-papel-tijera/src/pages/login/login.scss
+++ b/piedra-papel-tijera/src/pages/login/login.scss
@@ -1,24 +1,24 @@
 page-login {
 
     input[type=text] {
-    width: 100%;
+    //width: 100%;
     padding: 12px 20px;
     margin: 12px 0;
     box-sizing: border-box;
     border: 2px solid orangered;
-    border-radius: 4px;
+    border-radius: 15px;
     color: white;
     font-size: 200%;
     font-weight: bold
     }
 
     input[type=password] {
-    width: 100%;
+    //width: 100%;
     padding: 12px 20px;
     margin: 12px 0;
     box-sizing: border-box;
     border: 2px solid orangered;
-    border-radius: 4px;
+    border-radius: 15px;
     color: white;
     font-size: 200%;
     font-weight: bold
@@ -32,6 +32,7 @@ page-login {
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 15px;
     }
 
     button[type=button] {
@@ -42,6 +43,7 @@ page-login {
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 15px;
     }
 
     ion-content {
