--- a/piedra-papel-tijera/src/pages/signin/signin.scss
+++ b/piedra-papel-tijera/src/pages/signin/signin.scss
@@ -1,24 +1,24 @@
 page-signin {
 
     input[type=text] {
-    width: 100%;
+    //width: 100%;
     padding: 12px 20px;
     margin: 12px 0;
     box-sizing: border-box;
     border: 2px solid aqua;
-    border-radius: 4px;
+    border-radius: 15px;
     color: white;
     font-size: 160%;
     font-weight: bold
     }
 
     input[type=password] {
-    width: 100%;
+    //width: 100%;
     padding: 12px 20px;
     margin: 12px 0;
     box-sizing: border-box;
     border: 2px solid aqua;
-    border-radius: 4px;
+    border-radius: 15px;
     color: white;
     font-size: 160%;
     font-weight: bold
@@ -32,6 +32,7 @@ page-signin {
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 15px;
     }
 
     ion-content {    
