--- a/Trivia/src/pages/signin/signin.scss
+++ b/Trivia/src/pages/signin/signin.scss
@@ -1,25 +1,25 @@
 page-signin {
 
     input[type=text] {
-    width: 100%;
+    //width: 100%;
     padding: 12px 20px;
     margin: 12px 0;
     box-sizing: border-box;
     border: 2px solid lightslategrey;
-    border-radius: 4px;
-    color: white;
+    border-radius: 15px;
+    color: ghostwhite;
     font-size: 150%;
     font-weight: bold
     }
 
     input[type=password] {
-    width: 100%;
+    //width: 100%;
     padding: 12px 20px;
     margin: 12px 0;
     box-sizing: border-box;
     border: 2px solid lightslategray;
-    border-radius: 4px;
-    color: white;
+    border-radius: 15px;
+    color: ghostwhite;
     font-size: 150%;
     font-weight: bold
     }
@@ -28,10 +28,11 @@ page-signin {
     background-color: darkcyan; 
     border: none;
     color: white;
-    padding: 16px 32px;
+    padding: 12px 32px;
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 15px;
     }
 
     ion-content {    
